@@ -191,7 +191,7 @@ test_main(void)
   /* NOTE: This isn't the standard way to do curve25519
      diffie-hellman, but it tests that the ecc_point interface works
      also with curve25519. */
-  test_dh ("curve25519", &nettle_curve25519,
+  test_dh ("curve25519", &_nettle_curve25519,
 	   "238301186166219052901200372289459967515481170332211409964804596991365959539",
 	   "14283836751943535877833976277675258994717521964638468784408792140505262281235",
 	   "43912344711849354965202408139054167824861850336739416536288592824181793690574",
