@@ -127,7 +127,7 @@ test_eddsa (const struct ecc_curve *ecc,
 void
 test_main (void)
 {
-  test_eddsa (&nettle_curve25519, &nettle_sha512,
+  test_eddsa (&_nettle_curve25519, &nettle_sha512,
 	      H("d75a980182b10ab7 d54bfed3c964073a"
 		"0ee172f3daa62325 af021a68f707511a"),
 	      SHEX(""),
@@ -135,7 +135,7 @@ test_main (void)
 		"84877f1eb8e5d974 d873e06522490155"
 		"5fb8821590a33bac c61e39701cf9b46b"
 		"d25bf5f0595bbe24 655141438e7a100b"));
-  test_eddsa (&nettle_curve25519, &nettle_sha512,
+  test_eddsa (&_nettle_curve25519, &nettle_sha512,
 	      H("3d4017c3e843895a 92b70aa74d1b7ebc"
 		"9c982ccf2ec4968c c0cd55f12af4660c"),
 	      SHEX("72"),
@@ -143,7 +143,7 @@ test_main (void)
 		"a2b27b5416503f8f b3762223ebdb69da"
 		"085ac1e43e15996e 458f3613d0f11d8c"
 		"387b2eaeb4302aee b00d291612bb0c00"));
-  test_eddsa (&nettle_curve25519, &nettle_sha512,
+  test_eddsa (&_nettle_curve25519, &nettle_sha512,
 	      H("1ed506485b09a645 0be7c9337d9fe87e"
 		"f99c96f8bd11cd63 1ca160d0fd73067e"),
 	      SHEX("fbed2a7df418ec0e 8036312ec239fcee"
